@@ -174,6 +174,7 @@ subprojects { project ->
         options.encoding "UTF-8"
         options.docEncoding "UTF-8"
         options.charSet "UTF-8"
+        options.jFlags "-Xms64M", "-Xmx512M", "-XX:MaxPermSize=256m"
     }
 
     idea {
